// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepKubeconfig should match snapshot 1`] = `
<div>
  <section
    class="flex flex-col"
  >
    <div
      class="mb-10"
    >
      <h1
        class="text-neutral-400 text-xl font-bold mb-2"
      >
        Kubeconfig
      </h1>
      <p
        class="text-neutral-350"
      >
        Upload your Kubeconfig file here.
      </p>
    </div>
    <form>
      <div
        class="mb-10"
      >
        <div
          class="dropzone"
          role="presentation"
          tabindex="0"
        >
          <input
            data-testid="drop-input"
            multiple=""
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <div
            class="flex w-full items-center justify-center min-h-[140px] rounded bg-neutral-100 border border-neutral-250 hover:border-neutral-300 transition-all ease-in-out duration-150 cursor-pointer text-neutral-350 text-xs border-dashed"
          >
            <div
              class="flex items-center h-full justify-center flex-col text-center"
            >
              <i
                aria-hidden="true"
                class="fa-solid fa-file-arrow-down text-xl mb-2"
              />
              <p>
                Click to import your 
                kubeconfig
                 file or
                <br />
                drag and drop it
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-neutral-100 dark:bg-neutral-500 dark:hover:bg-neutral-550 hover:[&:not(:active):not(:disabled)]:bg-transparent"
          type="button"
        >
          Back
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100"
          data-testid="button-submit"
          disabled=""
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </section>
</div>
`;

exports[`StepKubeconfig should match snapshot 2`] = `
<div>
  <section
    class="flex flex-col"
  >
    <div
      class="mb-10"
    >
      <h1
        class="text-neutral-400 text-xl font-bold mb-2"
      >
        Kubeconfig
      </h1>
      <p
        class="text-neutral-350"
      >
        Upload your Kubeconfig file here.
      </p>
    </div>
    <form>
      <div
        class="mb-10"
      >
        <div
          class="flex border border-neutral-200 p-3 gap-2 rounded items-center"
        >
          <div
            class="p-2"
          >
            <i
              aria-hidden="true"
              class="fa-solid fa-file-lines "
            />
          </div>
          <div
            class="flex flex-col text-xs grow"
          >
            <span
              class="text-neutral-400 font-medium"
            >
              file.yaml
            </span>
            <span
              class="text-neutral-350"
            >
              1234
               Ko
            </span>
          </div>
          <div>
            <button
              class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-transparent"
              type="button"
            >
              <i
                aria-hidden="true"
                class="fa-solid fa-trash "
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-neutral-100 dark:bg-neutral-500 dark:hover:bg-neutral-550 hover:[&:not(:active):not(:disabled)]:bg-transparent"
          type="button"
        >
          Back
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100"
          data-testid="button-submit"
          disabled=""
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </section>
</div>
`;
